# PlaylistBot

./: .gitignore  README.md  main.py  pyproject.toml
config/: settings.json
data/: playlistbot.sqlite3
playlistbot/: config.py  dedup.py  handlers.py  main.py  pending.py  state.py
