[project]
name = "playlistbot"
version = "0.1.0"
description = "Telegram personal music organizer bot built with aiogram"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiogram>=3.26.0,<4.0.0",
    "aiohttp-socks>=0.10.1,<1.0.0",
]

[project.scripts]
playlistbot = "playlistbot.main:main"

[tool.uv]
package = true

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["playlistbot"]
